# scrite

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Info.plist  LICENSE.txt  License.txt  PhTranslateLib  README  README.md  abstractdeviceio.cpp  abstractdeviceio.h  abstractexporter.cpp  abstractexporter.h  abstractimporter.cpp  abstractimporter.h  abstractreportgenerator.cpp  abstractreportgenerator.h  abstractscreenplaysubsetreport.cpp  abstractscreenplaysubsetreport.h  abstractshapeitem.cpp  abstractshapeitem.h  abstracttextdocumentexporter.cpp  abstracttextdocumentexporter.h  aggregation.cpp  aggregation.h  annotations_metadata.json  appicon.icns  application.cpp  application.h  autoupdate.cpp  autoupdate.h  basictimer.cpp  basictimer.h  characterreportgenerator.cpp  characterreportgenerator.h  characterscreenplayreport.cpp  characterscreenplayreport.h  completer.cpp  (+127 more)
apps/desktop/: CMakeLists.txt  Info.plist  Info.plist.in  appicon.icns  desktop.pro  main.cpp  main.qml  qml.qrc  ui.qrc
apps/desktop/cmake/: DesktopGenericSources.cmake  DesktopIconsAndImages.cmake  DesktopMiscAndFontsResources.cmake  DesktopPlatformSources.cmake  DesktopQmlAndAssetFiles.cmake  DesktopQmlSources.cmake
apps/desktop/fonts/Bengali/: bengali_font.qrc
apps/desktop/fonts/English/: english_font.qrc  source.txt
apps/desktop/fonts/Gujarati/: gujarati_font.qrc
apps/desktop/fonts/Hindi/: hindi_font.qrc
apps/desktop/fonts/Kannada/: kannada_font.qrc  source.txt
apps/desktop/fonts/Malayalam/: malayalam_font.qrc  source.txt
apps/desktop/fonts/Marathi/: marathi_font.qrc  source.txt
apps/desktop/fonts/Oriya/: oriya_font.qrc  source.txt
apps/desktop/fonts/Punjabi/: punjabi_font.qrc
apps/desktop/fonts/Rubik/: rubik_font.qrc
apps/desktop/fonts/Tamil/: tamil_font.qrc
apps/desktop/fonts/Telugu/: source.txt  telugu_font.qrc
apps/desktop/icons/: icons.qrc
apps/desktop/images/: images.qrc
apps/desktop/js/: getBoxToBoxArrow.js
apps/desktop/misc/: homescreen_info.md  misc.qrc  richtexteditor.html  richtexttransform.html  scriptalay_info.md  storybeats.lst
apps/desktop/packaging/linux/: Scrite.desktop  package.sh
apps/desktop/packaging/windows/: package-x64.bat
apps/desktop/qml/: NotebookView.qml  ScreenplayEditor.qml  ScriteMainWindowContent.qml  ScritedView.qml  StructureView.qml  TimelineView.qml
apps/desktop/qml/commandcenter/: CommandCenter.qml  HelpCenter.qml  qmldir
apps/desktop/qml/controls/: VclButton.qml  VclCheckBox.qml  VclComboBox.qml  VclDialog.qml  VclFileDialog.qml  VclGroupBox.qml  VclLabel.qml  VclMenu.qml  VclMenuItem.qml  VclRadioButton.qml  VclScrollBar.qml  VclSpinBox.qml  VclText.qml  VclTextField.qml  VclToolButton.qml  qmldir
apps/desktop/qml/dialogs/: AboutDialog.qml  BackupsDialog.qml  CollaboratorsDialog.qml  EditHyperlinkDialog.qml  ExportConfigurationDialog.qml  FontSelectionDialog.qml  HomeScreen.qml  JoinDiscordCommunity.qml  JumpToSceneNumberDialog.qml  LanguageOptionsDialog.qml  LegacyDataMigrationDialog.qml  LicenseDialog.qml  MessageBox.qml  PdfDialog.qml  RenameCharacterDialog.qml  RenameLocationDialog.qml  ReportConfigurationDialog.qml  RequestVersionTypeAccess.qml  SceneGroupKeywordsDialog.qml  ScreenplayEditorOptionsDialog.qml  ScreenplayFormattingRulesDialog.qml  ScreenplayPageSetupDialog.qml  ScreenplayTracksDialog.qml  SelectionListDialog.qml  SettingsDialog.qml  ShortcutEditorDialog.qml  ShortcutInputDialog.qml  SplashScreen.qml  StructureIndexCardFieldsDialog.qml  StructureStoryBeatsDialog.qml  SubscriptionDetailsDialog.qml  SubscriptionPlanComparisonDialog.qml  SubscriptionPlanPurchaseDialog.qml  TitlePageDialog.qml  TrialNotActivatedDialog.qml  UserAccountDialog.qml  UserOnboardingDialog.qml  ViewLicenseDialog.qml  WaitDialog.qml
apps/desktop/qml/floatingdockpanels/: FloatingDock.qml  FloatingDockLayer.qml  FloatingMarkupToolsDock.qml
apps/desktop/qml/globals/: ActionHub.qml  Runtime.qml  SubscriptionPlanOperations.qml
apps/desktop/qml/helpers/: ActionManagerMenu.qml  ActionManagerToolBar.qml  ActionManagerToolButton.qml  ActionToolButton.qml  AlphabetMappingsView.qml  AttachmentsDropArea.qml  AttachmentsView.qml  BoxShadow.qml  BusyIcon.qml  BusyMessage.qml  ColorMenu.qml  ColorPalette.qml  ColorToolButton.qml  DialogLauncher.qml  DisabledFeatureNotice.qml  FileSelector.qml  FlatToolButton.qml  FlickableTextArea.qml  LanguageTransliteratorPopup.qml  Link.qml  LodLoader.qml  MarkSceneAsMenu.qml  MenuLoader.qml  PageView.qml  PdfView.qml  RectangleTabView.qml  RichTextEdit.qml  RubberBand.qml  SceneFeaturedImage.qml  SceneHeadingTextField.qml  SceneTypeImage.qml  ScreenplayTracksView.qml  ScrollArea.qml  SearchBar.qml  ShortcutField.qml  SidePanel.qml  SimpleToolButton.qml  SpecialSymbolsSupport.qml  SpellingSuggestionsMenu.qml  TagText.qml  (+11 more)
apps/desktop/qml/init/: AppInitStateMachine.qml
apps/desktop/qml/mainwindow/: Header.qml  NotebookTab.qml  ReloadPromptDialog.qml  ScreenplayTab.qml  ScritedTab.qml  StructureTab.qml  VerticalToolBar.qml  Workspace.qml  qmldir
apps/desktop/qml/native/: ActionManagerNativeMenu.qml  NativeActionMenuItem.qml  NativeMenuBar.qml
apps/desktop/qml/notebookview/: NotesTreeView.qml  NotesTreeViewDelegate.qml  qmldir
apps/desktop/qml/notifications/: HelpTipNotification.qml  NotificationsLayer.qml  NotificationsView.qml  qmldir
apps/desktop/qml/overlays/: AnimatedTextOverlay.qml  BusyOverlay.qml  OverlaysLayer.qml
apps/desktop/qml/screenplayeditor/: PageBreakItem.qml  ScreenplayBreakElementsContextMenu.qml  ScreenplayEditorCharacterMenu.qml  ScreenplayEditorDropArea.qml  ScreenplayEditorSearchBar.qml  ScreenplayEditorSidePanel.qml  ScreenplayEditorStatusBar.qml  ScreenplayElementListView.qml  ScreenplaySceneElementsContextMenu.qml  qmldir
apps/desktop/qml/structureview/: AnnotationLayer.qml  IndexCardFields.qml  StructureCanvas.qml  StructureCanvasContextMenu.qml  StructureCanvasPreview.qml  StructureCanvasScrollArea.qml  StructureElementLayer.qml  StructureGroupsMenu.qml  StructureViewActionHandlers.qml  StructureViewStatusBar.qml
apps/desktop/qml/tasks/: qmldir  (+3 more)
(+1371 files in other folders)
